# fill_tables

./: .gitignore  README.md  instruction.txt  pyproject.toml
fill_tables/scripts/: fill_tables.py
